tests/paczka1/fuzzy1/69819884.err
Error in line 7: Kqai3ijgZc S583 83,4
Error in line 2: A788 S583 78,0
Error in line 21: Kqai3ijgZc A788 78,7
Error in line 27: HCX42y S117 86,7
Error in line 29: TjLUVb031U S117 473,87
Error in line 26: TjLUVb031U S117 95,9
